<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Adam-Project</string>

    <string name="long_day_format">EEEE dd MMMM</string>
    <string name="short_day_format">EEE dd MMM</string>
    <string name="hour_of_day_format">HH:mm</string>

    <!-- glycaemia screen -->
    <string name="glycaemia_date">Date</string>
    <string name="glycaemia_date_placeholder">saisir la date</string>

    <string name="glycaemia_hour">Heure</string>
    <string name="glycaemia_hour_placeholder">saisir l\'heure</string>

    <string name="glycaemia_value">Valeur mg/Dl</string>
    <string name="glycaemia_value_placeholder">saisir la glycémie</string>
    <string name="validate_glycaemia">Enregistrer</string>
    <string name="pick_time">changer l\'heure</string>

    <string name="tab_dashboard">Accueil</string>
    <string name="tab_diet">Régimes</string>
    <string name="tab_data">Données</string>

    <string name="pref_category_alerts">Alertes</string>
    <string name="pref_category_mail">Mails</string>
    <string name="pref_time_before_alert">Nombre de minutes pour l\'alerte</string>
    <string name="pref_recipients">Destinataires du mail</string>
    <string name="pref_notif" >Sonnerie de notification</string>
    <string name="pref_notif_summary">selection du son de notification</string>
    <string name="pref_glycaemia" >Saisie glycémie</string>
    <string name="pref_min_glycaemia" >Minimum autorisé</string>
    <string name="pref_max_glycaemia" >Maximum autorisé</string>
    <string name="pref_risk_glycaemia" >Seuil glycémie risquée</string>
    <string name="pref_alarm_sound">Sonnerie d\'alarme</string>
    <string name="pref_alarm_summary">selection du son d\'alarme</string>
    <string-array name="pref_alert_type_entries">
        <item>Alarme</item>
        <item>Notification</item>
        <item>Aucune</item>
    </string-array>

    <string name="pref_alert_type_value_none" translatable="false">NONE</string>
    <string name="pref_alert_type_value_alarm" translatable="false">ALARM</string>
    <string name="pref_alert_type_value_notif" translatable="false">NOTIF</string>
    <string-array name="pref_alert_type_values">
        <item>@string/pref_alert_type_value_alarm</item>
        <item>@string/pref_alert_type_value_notif</item>
        <item>@string/pref_alert_type_value_none</item>
    </string-array>

    <string name="action_add_diet">Importer un régime</string>
    <string name="action_settings">paramètres</string>
    <string name="set_current_status">définir comme actif</string>
    <string name="current_diet">actif</string>
    <string name="set_current_status_confirmation_message">Etes vous sûr de vouloir activer ce régime ?</string>
    <string name="set_current_status_confirmation_title">Confirmation</string>
    <string name="remove_diet">supprimer</string>
    <string name="remove_diet_confirmation_title">Confirmation</string>
    <string name="remove_diet_confirmation_message">Voulez vous supprimer ce régime ?</string>
    <string name="glycaemia_value_unit">mg/Dl</string>
    <string name="dashboard_input_glycaemia">Ajouter une mesure de glycémie</string>


    <string name="glycaemia_value_format">%.2f mg/dL</string>


    <string name="select_file_to_load">Sélectionner un fichier</string>
    <string name="enter_diet_name_title">Régime</string>
    <string name="enter_diet_name_content">Entrez un nom de régime</string>
    <string name="enter_diet_name_ok_btn">ok</string>
    <string name="glycaemia_add">Ajouter une glycémie</string>

    <string name="glycaemia_unit" translatable="false">mg/dL</string>
    <string name="pref_default_time_before_alert"  translatable="false">15</string>

    <string name="mail_header">Relevés glycémie:</string>
    <string name="mail_subject">Relevés glycémie</string>
    <string name="from">Du:</string>
    <string name="to">Au:</string>

    <string name="input_glycaemia_range_date_cancel_btn">Annuler</string>
    <string name="input_glycaemia_range_date_ok_btn">Ok</string>

    <string name="notif_title">Bientôt l\'heure du repas!</string>
    <string name="notif_content">Prochain repas à %1$s</string>

    <string name="alert_slide_hint">glissez pour arrêter</string>
    <string name="alert_next_meal_at">Prochain repas à </string>
    <string name="pref_alert_type">Type d\'alerte</string>

</resources>