<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_alerts">
        <EditTextPreference
            android:defaultValue="@string/pref_default_time_before_alert"
            android:key="@string/pref_time_before_alert"
            android:title="@string/pref_time_before_alert" />

        <Preference android:title="@string/pref_notif"
            android:key="@string/pref_notif"
            android:summary="@string/pref_notif_summary"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_mail">
        <EditTextPreference
            android:singleLine="false"
            android:key="@string/pref_recipients"
            android:title="@string/pref_recipients" />
    </PreferenceCategory>
</PreferenceScreen>