<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/glycaemia_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/glycaemia_date"/>

        <TextView
            android:id="@+id/glycaemia_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/glycaemia_date_label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:hint="@string/glycaemia_date_placeholder"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">
        <TextView
            android:id="@+id/glycaemia_hour_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glycaemia_hour"/>

        <EditText
            android:id="@+id/glycaemia_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/glycaemia_hour_label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/glycaemia_hour_placeholder"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/glycaemia_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glycaemia_value"/>

        <EditText
            android:id="@+id/glycaemia_value_mg_Dl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/glycaemia_value_placeholder"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <Button
        android:id="@+id/glycaemia_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_glycaemia"/>

</LinearLayout>