<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightBlue">

        <Button
            android:id="@+id/date_pick_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_glycaemia_range_date_cancel_btn"
            android:background="@color/colorLightBlue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/date_pick_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_glycaemia_range_date_ok_btn"
            android:layout_alignParentEnd="true"
            android:background="@color/colorLightBlue"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:paddingStart="12dp"
        android:id="@+id/date_pick_from_to_text"
        android:background="@color/colorLightBlue"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:headerBackground="@color/colorLightBlue"/>

</LinearLayout>